--- a/.prettierignore
+++ b/.prettierignore
@@ -6,19 +6,4 @@ yarn.lock
 !.yarn/versions
 **/dist/**
 coverage/
-
-# TODO: enable once we get the new version working
-# examples/error-handling
-examples/nextj
-examples/subscriptions
-# examples/express
-examples/graphql-config
-examples/prisma-js
-# examples/sveltekit
-# examples/fastify
-# examples/fastify-modules
-examples/hello-world
-examples/prisma-ts
-examples/modular-resolvers
-examples/defer-stream
-examples/schema-directives
+.next/
