--- a/examples/graphql-config/tsconfig.json
+++ b/examples/graphql-config/tsconfig.json
@@ -6,8 +6,6 @@
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "lib": [
-      "esnext"
-    ]
+    "lib": ["esnext"]
   }
 }
