--- a/examples/modular-resolvers/tsconfig.json
+++ b/examples/modular-resolvers/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "es2017",
-      "esnext.asynciterable"
-    ],
+    "lib": ["dom", "es2017", "esnext.asynciterable"],
     "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
@@ -12,6 +8,6 @@
     "sourceMap": true,
     "noImplicitAny": false,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
+    "experimentalDecorators": true
   }
 }
