--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check": "tsc --pretty --noEmit"
   },
   "dependencies": {
     "@graphql-yoga/node": "0.1.0-alpha.3",
