--- a/packages/graphiql/package.json
+++ b/packages/graphiql/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "start": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "check": "tsc --pretty --noEmit"
   },
   "keywords": [
     "graphql",
