--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -15,7 +15,8 @@
     "yoga": "dist/bin.js"
   },
   "scripts": {
-    "prepack": "bob prepack"
+    "prepack": "bob prepack",
+    "check": "tsc --pretty --noEmit"
   },
   "keywords": [
     "graphql",
