--- a/benchmark/hello-world/package.json
+++ b/benchmark/hello-world/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node start-server.js",
-    "loadtest": "k6 run k6.js"
+    "loadtest": "k6 run k6.js",
+    "check": "exit 0"
   },
   "dependencies": {
     "@graphql-yoga/node": "0.1.0-alpha.3",
