--- a/examples/apollo-federation/package.json
+++ b/examples/apollo-federation/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "concurrently \"yarn start:service\" \"yarn start:gateway\"",
     "start:service": "cd service && yarn start",
-    "start:gateway": "cd gateway && yarn start"
+    "start:gateway": "cd gateway && yarn start",
+    "check": "exit 0"
   },
   "dependencies": {
     "concurrently": "^7.0.0"
