--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "0.0.1-alpha.10",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "check": "tsc --pretty --noEmit"
   },
   "dependencies": {
     "@graphql-yoga/node": "0.1.0-alpha.3",
