--- a/examples/fastify-modules/package.json
+++ b/examples/fastify-modules/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "0.0.1-alpha.5",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "check": "tsc --pretty --noEmit"
   },
   "dependencies": {
     "@envelop/graphql-modules": "2.0.0",
