--- a/examples/graphql-config/package.json
+++ b/examples/graphql-config/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1-alpha.8",
   "scripts": {
     "generate-types": "graphql-codegen",
-    "start": "yoga"
+    "start": "yoga",
+    "check": "tsc --pretty --noEmit"
   },
   "dependencies": {
     "@graphql-codegen/cli": "^2.3.0",
