--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "0.0.1-alpha.10",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "check": "exit 0"
   },
   "dependencies": {
     "@graphql-yoga/node": "0.1.0-alpha.3",
