--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -10,7 +10,8 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "scripts": {
-    "prepack": "bob prepack"
+    "prepack": "bob prepack",
+    "check": "tsc --pretty --noEmit"
   },
   "keywords": [
     "graphql",
