--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -32,14 +32,11 @@ jobs:
 
       - name: Start Yoga Server
         working-directory: ./benchmark/hello-world
-        run: yarn start & yarn wait-on http://127.0.0.1:4000/graphql
+        run: yarn start & sleep 5s
         env:
           NODE_OPTIONS: --experimental-fetch
           NODE_NO_WARNINGS: true
           NODE_ENV: production
-      - name: Sleep for 5 seconds
-        run: sleep 5s
-        shell: bash
       - name: Start and Report Yoga Benchmark
         working-directory: ./benchmark/hello-world
         run: k6 -e GITHUB_PR=${{ github.event.number }} -e GITHUB_SHA=${{ github.sha }} -e GITHUB_TOKEN=${{secrets.GITHUB_TOKEN}} run k6.js
