--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -8,14 +8,11 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-        with:
-          # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
-          fetch-depth: 0
 
       - name: Use Node
         uses: actions/setup-node@master
         with:
-          node-version: 16.4.2
+          node-version: 17
 
       - name: Get yarn cache
         uses: c-hive/gha-yarn-cache@v2
@@ -35,15 +32,11 @@ jobs:
 
       - name: Start Yoga Server
         working-directory: ./benchmark/hello-world
-        run: |
-          yarn start &
-          yarn wait-on tcp:4000
+        run: yarn start & sleep 5s
         env:
+          NODE_OPTIONS: --experimental-fetch
           NODE_NO_WARNINGS: true
           NODE_ENV: production
-      - name: Sleep for 5 seconds
-        run: sleep 5s
-        shell: bash
       - name: Start and Report Yoga Benchmark
         working-directory: ./benchmark/hello-world
         run: k6 -e GITHUB_PR=${{ github.event.number }} -e GITHUB_SHA=${{ github.sha }} -e GITHUB_TOKEN=${{secrets.GITHUB_TOKEN}} run k6.js
