--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,15 @@ jobs:
       - name: Build Packages
         run: yarn build
 
-      - name: Run Tests
+      - if: matrix.node-version == 17
+        name: Run Tests with --experimental-fetch
+        run: yarn test
+        env:
+          NODE_OPTIONS: --experimental-fetch
+          NODE_NO_WARNINGS: true
+
+      - if: matrix.node-version != 17
+        name: Run Tests
         run: yarn test
 
   typecheck:
