--- a/website/package.json
+++ b/website/package.json
@@ -33,10 +33,12 @@
     "@chakra-ui/utils": "^1.9.1",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@graphql-yoga/node": "^0.0.1-beta.1",
     "@guild-docs/client": "^1.3.2",
     "@guild-docs/server": "^2.1.4",
     "@theguild/components": "^1.8.2",
     "framer-motion": "^6.0.0",
+    "graphql": "16.3.0",
     "next": "^12.0.6",
     "next-i18next": "^10.0.1",
     "next-seo": "^5.0.0",
