try beta release

--- a/examples/sveltekit/package.json
+++ b/examples/sveltekit/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sveltekit",
-	"version": "0.0.2-alpha.3",
+	"version": "0.0.0",
 	"private": true,
 	"scripts": {
 		"dev": "svelte-kit dev",
