--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@graphql-yoga/common",
-  "version": "0.2.0-alpha.11",
+  "version": "0.0.0",
   "description": "",
   "repository": {
     "type": "git",
