--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@graphql-yoga/node",
-  "version": "0.1.0-alpha.4",
+  "version": "0.0.0",
   "description": "",
   "repository": {
     "type": "git",
