--- a/examples/error-handling/package.json
+++ b/examples/error-handling/package.json
@@ -1,7 +1,7 @@
 {
   "name": "error-masking-example",
   "private": true,
-  "version": "0.0.1-alpha.4",
+  "version": "0.0.0",
   "scripts": {
     "start": "ts-node src/index.ts",
     "check": "tsc --pretty --noEmit"
