--- a/examples/fastify-modules/package.json
+++ b/examples/fastify-modules/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fastify-modules-example",
   "private": true,
-  "version": "0.0.1-alpha.6",
+  "version": "0.0.0",
   "scripts": {
     "start": "ts-node src/index.ts",
     "check": "tsc --pretty --noEmit"
