--- a/examples/graphql-config/package.json
+++ b/examples/graphql-config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "graphql-config-example",
   "private": true,
-  "version": "0.0.1-alpha.9",
+  "version": "0.0.0",
   "scripts": {
     "generate-types": "graphql-codegen",
     "start": "yoga",
