--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hello-world",
   "private": true,
-  "version": "0.0.1-alpha.11",
+  "version": "0.0.0",
   "scripts": {
     "start": "node index.js",
     "check": "exit 0"
