--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nextjs",
   "private": true,
-  "version": "0.0.1-alpha.9",
+  "version": "0.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
