--- a/packages/subscription/package.json
+++ b/packages/subscription/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@graphql-yoga/subscription",
-  "version": "0.1.0-alpha.2",
+  "version": "0.0.0",
   "description": "",
   "repository": {
     "type": "git",
