--- a/renovate.json
+++ b/renovate.json
@@ -1,12 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", ":preserveSemverRanges"],
-  "postUpdateOptions": ["yarnDedupeFewer"],
-  "automerge": true,
-  "major": {
-    "automerge": false
-  },
-  "labels": ["dependencies"],
+  "extends": [
+    "github>the-guild-org/shared-config:renovate",
+    ":preserveSemverRanges"
+  ],
   "packageRules": [
     {
       "groupName": "envelop",
