--- a/packages/subscription/package.json
+++ b/packages/subscription/package.json
@@ -47,6 +47,8 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@ungap/event-target": "0.2.3",
+    "@ungap/event": "0.2.2",
     "bob-the-bundler": "^1.5.1"
   }
 }
