use and recommend event-target-polyfill

--- a/packages/subscription/package.json
+++ b/packages/subscription/package.json
@@ -47,8 +47,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@ungap/event-target": "0.2.3",
-    "@ungap/event": "0.2.2",
+    "event-target-polyfill": "0.0.3",
     "bob-the-bundler": "^1.5.1"
   }
 }
