--- a/packages/subscription/package.json
+++ b/packages/subscription/package.json
@@ -47,6 +47,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "event-target-polyfill": "0.0.3",
     "bob-the-bundler": "^1.5.1"
   }
 }
