Add missing check script for TypeChecking workflow

--- a/examples/service-worker/package.json
+++ b/examples/service-worker/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "wrangler dev"
+    "start": "wrangler dev",
+    "check": "tsc --noEmit"
   },
   "dependencies": {
     "@graphql-yoga/common": "0.0.1-beta.1",
