Add cloudflare example

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,7 @@
     "**/.git": true,
     "**/.DS_Store": true,
     "**/node_modules": true,
-    "**/dist": true,
+    "**/dist": false,
     "test-lib": true,
     "lib": true,
     "coverage": true,
