--- a/examples/cloudflare/tsconfig.json
+++ b/examples/cloudflare/tsconfig.json
@@ -6,12 +6,8 @@
     "types": ["@cloudflare/workers-types"],
     "moduleResolution": "node",
     "strict": true,
-    "noEmit": true,
     "esModuleInterop": true,
-    "baseUrl": "./",
-    "paths": {
-      "@/*": ["src/*"]
-    }
+    "baseUrl": "./"
   },
   "include": ["src/**/*"]
 }
