--- a/examples/cloudflare/package.json
+++ b/examples/cloudflare/package.json
@@ -8,9 +8,14 @@
     "build": "node build.js",
     "dev": "miniflare --live-reload --debug",
     "test": "npm run build && node --experimental-vm-modules ../../node_modules/jest/bin/jest.js",
-    "types:check": "tsc && tsc -p test/tsconfig.json"
+    "check": "tsc --noEmit && tsc  --noEmit -p test/tsconfig.json"
   },
   "devDependencies": {
+    "@babel/core": "7.17.5",
+    "@babel/preset-env": "7.16.11",
+    "@babel/preset-typescript": "7.16.7",
+    "@babel/plugin-transform-runtime": "7.17.0",
+    "babel-jest": "^27.3.1",
     "@cloudflare/workers-types": "^3.1.1",
     "@types/jest": "^27.0.2",
     "esbuild": "^0.13.13",
@@ -18,7 +23,7 @@
     "jest-environment-miniflare": "^2.0.0",
     "miniflare": "^2.0.0",
     "prettier": "^2.4.1",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "tslib": "2.3.1"
   }
 }
