--- a/examples/cloudflare/package.json
+++ b/examples/cloudflare/package.json
@@ -8,7 +8,7 @@
     "build": "node build.js",
     "dev": "miniflare --live-reload --debug",
     "test": "npm run build && node --experimental-vm-modules ../../node_modules/jest/bin/jest.js",
-    "check": "tsc --noEmit && tsc  --noEmit -p test/tsconfig.json"
+    "check": "tsc --pretty --noEmit"
   },
   "devDependencies": {
     "@babel/core": "7.17.5",
@@ -16,7 +16,6 @@
     "@babel/preset-typescript": "7.16.7",
     "@babel/plugin-transform-runtime": "7.17.0",
     "babel-jest": "^27.3.1",
-    "@cloudflare/workers-types": "^3.1.1",
     "@types/jest": "^27.0.2",
     "esbuild": "^0.13.13",
     "jest": "^27.3.1",
