--- a/examples/hackernews-node-ts/package.json
+++ b/examples/hackernews-node-ts/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "dev": "cross-env NODE_ENV=development ts-node-dev --exit-child --respawn src/main.ts",
-    "start": "ts-node src/main.ts"
+    "start": "ts-node src/main.ts",
+    "check": "tsc --pretty --noEmit"
   },
   "keywords": [],
   "author": "",
