revamp structure: graph relations

--- a/examples/hackernews/package.json
+++ b/examples/hackernews/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hackernews-node-ts",
+  "name": "hackernews",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -12,8 +12,6 @@
   "license": "ISC",
   "devDependencies": {
     "@prisma/client": "3.9.2",
-    "@types/bcryptjs": "2.4.2",
-    "@types/jsonwebtoken": "8.5.8",
     "@types/node": "16.11.7",
     "cross-env": "7.0.3",
     "ts-node": "10.4.0",
@@ -24,8 +22,6 @@
   "dependencies": {
     "@graphql-tools/schema": "8.3.1",
     "@graphql-yoga/node": "0.1.0-alpha.4",
-    "bcryptjs": "2.4.3",
-    "graphql": "16.3.0",
-    "jsonwebtoken": "8.5.1"
+    "graphql": "16.3.0"
   }
 }
