feat(common/node): remove lightmyrequest and move inject method to common package

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -47,6 +47,7 @@
     "@envelop/disable-introspection": "^3.0.0",
     "@envelop/parser-cache": "^4.0.0",
     "@envelop/validation-cache": "^4.0.0",
+    "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-tools/schema": "^8.3.1",
     "@graphql-tools/utils": "^8.6.0",
     "@graphql-yoga/render-graphiql": "0.1.0-beta.1",
