--- a/examples/service-worker/package.json
+++ b/examples/service-worker/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "wrangler dev",
-    "check": "tsc --noEmit"
+    "check": "tsc --pretty --noEmit"
   },
   "dependencies": {
     "@graphql-yoga/common": "0.1.0-beta.3",
