--- a/examples/service-worker/tsconfig.json
+++ b/examples/service-worker/tsconfig.json
@@ -5,7 +5,8 @@
     "target": "esnext",
     "lib": ["esnext", "webworker"],
     "moduleResolution": "node",
-    "sourceMap": true
+    "sourceMap": true,
+    "skipLibCheck": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "test"]
