--- a/website/package.json
+++ b/website/package.json
@@ -11,42 +11,42 @@
     "check": "exit 0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^12.0.6",
+    "@next/bundle-analyzer": "^12.0.10",
     "@types/concurrently": "^6.4.0",
     "@types/mdx-js__react": "^1.5.5",
     "@types/node": "^16.11.7",
-    "@types/react": "^17.0.37",
+    "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "bob-tsm": "^0.4.0",
+    "bob-tsm": "^0.4.6",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
-    "esbuild": "^0.14.2",
+    "esbuild": "^0.14.21",
     "next-remote-watch": "^1.0.0",
     "open-cli": "^7.0.1",
-    "typescript": "^4.4.4",
-    "wait-on": "^6.0.0"
+    "typescript": "^4.5.5",
+    "wait-on": "^6.0.1"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.1",
-    "@chakra-ui/react": "^1.7.2",
-    "@chakra-ui/theme-tools": "^1.3.1",
-    "@chakra-ui/utils": "^1.9.1",
-    "@emotion/react": "^11.7.0",
+    "@chakra-ui/icons": "^1.1.5",
+    "@chakra-ui/react": "^1.8.3",
+    "@chakra-ui/theme-tools": "^1.3.4",
+    "@chakra-ui/utils": "^1.10.2",
+    "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@graphql-yoga/node": "0.1.0-beta.4",
-    "@guild-docs/client": "^1.3.2",
-    "@guild-docs/server": "^2.1.4",
-    "@theguild/components": "^1.8.2",
-    "framer-motion": "^6.0.0",
+    "@guild-docs/client": "^1.4.0",
+    "@guild-docs/server": "^2.2.0",
+    "@theguild/components": "1.10.0-alpha-78eb2f1.0",
+    "framer-motion": "^6.2.6",
     "graphql": "16.3.0",
-    "next": "^12.0.6",
-    "next-i18next": "^10.0.1",
-    "next-seo": "^5.0.0",
+    "next": "^12.0.10",
+    "next-i18next": "^10.3.0",
+    "next-seo": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-use": "^17.3.1",
+    "react-use": "^17.3.2",
     "remark-admonitions": "^1.2.1",
-    "shiki": "^0.10.0"
+    "shiki": "^0.10.1"
   }
 }
