--- a/examples/hackernews/package.json
+++ b/examples/hackernews/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hackernews",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "scripts": {
     "dev": "cross-env NODE_ENV=development ts-node-dev --exit-child --respawn src/main.ts",
