Remove account id from worker example

--- a/examples/service-worker/wrangler.toml
+++ b/examples/service-worker/wrangler.toml
@@ -1,6 +1,6 @@
 compatibility_date = "2022-02-21"
 type = "webpack"
 name = "my-worker-dev"
-account_id = "12345678901234567890"
+account_id = ""
 workers_dev = true
 webpack_config = "webpack.config.js"
