--- a/packages/graphiql/package.json
+++ b/packages/graphiql/package.json
@@ -39,6 +39,7 @@
     "graphiql-explorer": "^0.9.0",
     "graphql": "^16.3.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "use-url-search-params": "^2.5.1"
   }
 }
