remove pino for Node and use a cross-platform simple logger

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -53,6 +53,7 @@
     "@graphql-yoga/render-graphiql": "0.1.0-beta.2",
     "@graphql-yoga/subscription": "0.0.1-beta.1",
     "cross-undici-fetch": "^0.1.25",
+    "chalk": "4.1.2",
     "dset": "^3.1.1",
     "tslib": "^2.3.1"
   },
