--- a/examples/express-graphql-upload/package.json
+++ b/examples/express-graphql-upload/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-example-with-graphql-upload",
   "private": true,
-  "version": "0.0.1-beta.7",
+  "version": "0.0.0",
   "scripts": {
     "start": "ts-node src/index.ts",
     "check": "tsc --pretty --noEmit"
