--- a/examples/subscriptions/package.json
+++ b/examples/subscriptions/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "0.0.1-beta.7",
   "scripts": {
-    "start": "ts-node --transpile-only src/index.ts",
+    "postinstall": "graphql-codegen --config codegen.yml",
+    "start": "ts-node src/index.ts",
     "check": "tsc --pretty --noEmit"
   },
   "dependencies": {
@@ -11,5 +12,10 @@
     "graphql": "^16.1.0",
     "ts-node": "10.4.0",
     "typescript": "^4.4.4"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typescript": "^2.4.8",
+    "@graphql-codegen/typescript-resolvers": "^2.6.1"
   }
 }
