fix missing script

--- a/examples/cloudflare-worker/package.json
+++ b/examples/cloudflare-worker/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "node build.js"
+    "build": "node build.js",
+    "check": "tsc --pretty --noEmit"
   },
   "devDependencies": {
     "esbuild": "^0.13.13",
