--- a/examples/apollo-federation/service/package.json
+++ b/examples/apollo-federation/service/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "check": "exit 0"
   },
   "dependencies": {
     "@apollo/subgraph": "^0.1.5",
