--- a/examples/aws-lambda/package.json
+++ b/examples/aws-lambda/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
+    "check": "tsc --noEmit",
     "test": "jest",
     "cdk": "cdk"
   },
