Add missing check script

--- a/examples/aws-lambda/lambda/package.json
+++ b/examples/aws-lambda/lambda/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "graphql.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "check": "exit 0"
   },
   "keywords": [],
   "author": "",
