Update testing documentation

--- a/examples/aws-lambda/package.json
+++ b/examples/aws-lambda/package.json
@@ -9,7 +9,8 @@
     "watch": "tsc -w",
     "check": "tsc --noEmit",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "postcdk": "rm -rf cdk-out"
   },
   "devDependencies": {
     "@aws-cdk/assert": "2.17.0",
