--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "packages/*",
     "examples/**/*",
     "benchmark/*",
-    "website"
+    "website",
+    "e2e"
   ],
   "homepage": "https://github.com/dotansimha/graphql-yoga#readme",
   "devDependencies": {
