--- a/e2e/package.json
+++ b/e2e/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "dependencies": {
-    "@pulumi/pulumi": "3.26.1",
+    "@pulumi/pulumi": "3.27.0",
     "@pulumi/cloudflare": "4.5.0",
+    "@pulumi/azure-native": "1.61.0",
     "@types/node": "17.0.23",
     "typescript": "4.6.2",
     "tsup": "5.12.1",
