--- a/examples/azure-function/package.json
+++ b/examples/azure-function/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "@azure/functions": "3.0.0",
-    "esbuild": "^0.13.13",
+    "esbuild": "0.14.28",
     "typescript": "^4.4.4",
     "tslib": "2.3.1"
   }
