--- a/e2e/package.json
+++ b/e2e/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "build": "tsup index.ts",
     "prestart": "yarn build",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "check": "exit 0"
   }
 }
