--- a/examples/apollo-federation/gateway/package.json
+++ b/examples/apollo-federation/gateway/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@apollo/gateway": "^0.45.1",
     "@envelop/apollo-federation": "^2.0.0",
-    "@graphql-yoga/node": "0.1.0-alpha.4",
+    "@graphql-yoga/node": "0.1.0-beta.7",
     "graphql": "^15.5.3"
   }
 }
