--- a/examples/apollo-federation/service/package.json
+++ b/examples/apollo-federation/service/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@apollo/subgraph": "^0.1.5",
-    "@graphql-yoga/node": "0.1.0-alpha.4",
+    "@graphql-yoga/node": "0.1.0-beta.7",
     "graphql": "^16.2.0"
   }
 }
