--- a/examples/hackernews/package.json
+++ b/examples/hackernews/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@graphql-tools/schema": "8.3.1",
-    "@graphql-yoga/node": "0.1.0-alpha.4",
+    "@graphql-yoga/node": "0.1.0-beta.7",
     "graphql": "16.3.0"
   }
 }
