--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "@graphql-tools/code-file-loader": "^7.2.3",
+    "@graphql-tools/mock": "^8.6.3",
     "@graphql-yoga/node": "0.1.0-beta.7",
     "graphql-config": "^4.1.0",
     "tslib": "^2.3.1",
