--- a/e2e/package.json
+++ b/e2e/package.json
@@ -7,6 +7,7 @@
     "@pulumi/pulumi": "3.27.0",
     "@pulumi/cloudflare": "4.5.0",
     "@pulumi/azure-native": "1.61.0",
+    "@pulumi/docker": "3.1.0",
     "@types/node": "17.0.23",
     "typescript": "4.6.2",
     "tsup": "5.12.1",
