--- a/examples/aws-lambda/package.json
+++ b/examples/aws-lambda/package.json
@@ -10,8 +10,9 @@
     "watch": "tsc -w",
     "check": "tsc --noEmit",
     "test": "jest",
-    "cdk": "cdk",
-    "postcdk": "rm -rf cdk-out"
+    "predeploy": "build",
+    "deploy": "cdk deploy",
+    "postdeploy": "rm -rf cdk-out"
   },
   "devDependencies": {
     "@aws-cdk/assert": "2.17.0",
