--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -18,8 +18,20 @@ jobs:
         with:
           node-version: 17
 
-      - name: Get yarn cache
-        uses: c-hive/gha-yarn-cache@v2
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - name: Cache Yarn
+        id: yarn-cache-17
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ steps.yarn-cache-dir-path.outputs.dir }}
+            **/node_modules
+          key: ${{ runner.os }}-17-node-modules-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-17-node-modules-
 
       - name: Install Dependencies using Yarn
         run: yarn
