--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -26,8 +26,7 @@ jobs:
         id: yarn-cache-17
         uses: actions/cache@v3
         with:
-          path: |
-            ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-17-node-modules-${{ hashFiles('yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-17-node-modules-
