--- a/.github/workflows/deployment-e2e.yml
+++ b/.github/workflows/deployment-e2e.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-node@master
         with:
           node-version: 17
+          cache: 'yarn'
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
