ci: only run CI for code changes

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,6 +1,10 @@
 name: Benchmark
 on:
   pull_request:
+    paths:
+      - 'packages/**'
+      - 'examples/**'
+      - 'patches/**'
 
 jobs:
   benchmarks:
