--- a/.github/workflows/deployment-e2e.yml
+++ b/.github/workflows/deployment-e2e.yml
@@ -1,6 +1,10 @@
 name: Deployment E2E
 on:
   pull_request:
+    paths:
+      - 'packages/**'
+      - 'examples/**'
+      - 'patches/**'
 
 jobs:
   test-deploy:
