--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -17,19 +17,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 17
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - name: Cache Yarn
-        id: yarn-cache-17
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-17-node-modules-${{ hashFiles('yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-17-node-modules-
+          cache: 'yarn'
 
       - name: Install Dependencies using Yarn
         run: yarn
