--- a/.github/workflows/deployment-e2e.yml
+++ b/.github/workflows/deployment-e2e.yml
@@ -14,13 +14,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Use Node 16
+      - name: Use Node 17
         uses: actions/setup-node@master
         with:
-          node-version: 16
-
-      - name: Get yarn cache
-        uses: c-hive/gha-yarn-cache@v2
+          node-version: 17
+          cache: 'yarn'
 
       - name: Install Dependencies using Yarn
         run: yarn --ignore-engines
