--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,7 @@ jobs:
         uses: actions/setup-node@master
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Get yarn cache
-        uses: c-hive/gha-yarn-cache@v2
+          cache: 'yarn'
 
       - name: Install Dependencies using Yarn
         run: yarn --ignore-engines
@@ -49,9 +47,7 @@ jobs:
         uses: actions/setup-node@master
         with:
           node-version: 17
-
-      - name: Get yarn cache
-        uses: c-hive/gha-yarn-cache@v2
+          cache: 'yarn'
 
       - name: Install Dependencies using Yarn
         run: yarn --ignore-engines
@@ -74,9 +70,7 @@ jobs:
         uses: actions/setup-node@master
         with:
           node-version: 17
-
-      - name: Get yarn cache
-        uses: c-hive/gha-yarn-cache@v2
+          cache: 'yarn'
 
       - name: Install Dependencies using Yarn
         run: yarn --ignore-engines
