--- a/examples/issue-template/tsconfig.json
+++ b/examples/issue-template/tsconfig.json
@@ -7,6 +7,8 @@
     "lib": ["esnext"],
     "strict": true,
     "alwaysStrict": true,
-    "noEmit": true
-  }
+    "noEmit": true,
+    "skipLibCheck": true
+  },
+  "include": ["./src"]
 }
