do not run for website

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -2,10 +2,7 @@ name: Benchmark
 on:
   pull_request:
     paths:
-      - 'packages/**'
-      - 'examples/**'
-      - 'patches/**'
-
+      - '!website/**'
 jobs:
   benchmarks:
     runs-on: ubuntu-latest
