--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,7 @@ name: Tests
 on:
   pull_request:
     paths:
-      - 'packages/**'
-      - 'examples/**'
-      - 'patches/**'
+      - '!website/**'
 
 jobs:
   test-node:
