Load GraphiQL from CDN

--- a/packages/render-graphiql/package.json
+++ b/packages/render-graphiql/package.json
@@ -42,5 +42,8 @@
   "publishConfig": {
     "directory": "dist",
     "access": "public"
+  },
+  "peerDependencies": {
+    "@graphql-yoga/common": "^2.0.0"
   }
 }
