--- a/packages/graphiql/package.json
+++ b/packages/graphiql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@graphql-yoga/graphiql",
-  "private": true,
+  "type": "module",
   "version": "2.0.0",
   "description": "",
   "repository": {
@@ -8,6 +8,10 @@
     "url": "https://github.com/dotansimha/graphql-yoga.git",
     "directory": "packages/graphiql"
   },
+  "main": "dist/yoga-graphiql.es.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "start": "vite",
     "build": "vite build",
@@ -19,14 +23,6 @@
   ],
   "author": "Laurin Quast <laurinquast@googlemail.com>",
   "license": "MIT",
-  "buildOptions": {
-    "input": "./src/index.ts",
-    "bin": {
-      "graphql-yoga": {
-        "input": "src/bin.ts"
-      }
-    }
-  },
   "devDependencies": {
     "@types/react": "17.0.43",
     "@vitejs/plugin-react-refresh": "1.3.6",
@@ -40,6 +36,7 @@
     "graphql": "^16.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "use-url-search-params": "^2.5.1"
+    "use-url-search-params": "^2.5.1",
+    "json-bigint-patch": "^0.0.8"
   }
 }
