--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -56,7 +56,8 @@
     "bob-the-bundler": "^1.5.1",
     "eventsource": "^2.0.0",
     "graphql": "^16.0.1",
-    "puppeteer": "13.5.1"
+    "puppeteer": "13.5.1",
+    "graphql-scalars": "^1.16.1"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0"
