--- a/.github/workflows/deployment-e2e.yml
+++ b/.github/workflows/deployment-e2e.yml
@@ -1,8 +1,8 @@
 name: Deployment E2E
 on:
   pull_request:
-    paths:
-      - '!website/**'
+    paths-ignore:
+      - 'website/**'
 
 jobs:
   test-deploy:
