--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -54,12 +54,10 @@
     "cross-undici-fetch": "^0.1.25",
     "chalk": "4.1.2",
     "dset": "^3.1.1",
-    "tslib": "^2.3.1",
-    "micromatch": "4.0.5"
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
-    "@types/micromatch": "4.0.2",
     "bob-the-bundler": "^1.5.1"
   },
   "peerDependencies": {
