--- a/website/package.json
+++ b/website/package.json
@@ -34,6 +34,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@graphql-yoga/node": "2.0.0",
+    "@graphql-yoga/render-graphiql": "2.0.0",
     "@guild-docs/client": "^1.4.0",
     "@guild-docs/server": "^2.2.0",
     "@theguild/components": "1.10.3",
