--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "release:canary": "(node scripts/canary-release.js && yarn build && yarn changeset publish --tag canary) || echo Skipping Canary...",
     "start:docs": "yarn workspace @graphql-yoga/website dev",
     "postinstall": "patch-package && husky install",
-    "fix-bin": "node scripts/fix-bin.js"
+    "fix-bin": "node scripts/fix-bin.js",
+    "build-website": "yarn build && cd website && yarn build"
   },
   "repository": {
     "type": "git",
