--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
   "resolutions": {
     "@changesets/apply-release-plan": "6.0.0",
     "graphql": "16.3.0",
-    "cross-undici-fetch": "0.1.28"
+    "cross-undici-fetch": "0.1.28",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
