--- a/website/package.json
+++ b/website/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "postbuild": "npx next-sitemap && ts-node scripts/sitemap-ci.ts",
     "dev": "concurrently -r \"next-remote-watch ./docs ./routes.ts ./src/pages/_app.tsx ./src/pages/_document.tsx\" \"wait-on -s 1 http://localhost:3000 && open-cli http://localhost:3000\"",
     "next": "next",
     "start": "next start",
@@ -23,6 +24,7 @@
     "esbuild": "^0.14.21",
     "next-remote-watch": "^1.0.0",
     "open-cli": "^7.0.1",
+    "fast-xml-parser": "^4.0.7",
     "typescript": "^4.5.5",
     "wait-on": "^6.0.1"
   },
@@ -43,6 +45,7 @@
     "next": "^12.0.10",
     "next-i18next": "^10.3.0",
     "next-seo": "^5.1.0",
+    "next-sitemap": "^2.5.17",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
