--- a/.github/workflows/website-integrity.yml
+++ b/.github/workflows/website-integrity.yml
@@ -25,4 +25,6 @@ jobs:
       - name: Typecheck
         run: yarn workspace @graphql-yoga/website run build
       - name: Diff
+        run: git diff --exit-code -- website/route-lockfile.txt
+      - name: Compare
         run: (git diff origin/master.. -- website/route-lockfile.txt | grep "^-[^-]" && exit 1) || exit 0
