--- a/.github/workflows/website-integrity.yml
+++ b/.github/workflows/website-integrity.yml
@@ -26,5 +26,15 @@ jobs:
         run: yarn workspace @graphql-yoga/website run build
       - name: Diff
         run: git diff --exit-code -- website/route-lockfile.txt
+
       - name: Compare
         run: git diff origin/${{ github.base_ref }}.. -- website/route-lockfile.txt | grep "^-[^-]" && exit 1 || exit 0
+
+      - name: Diff to file
+        run: git diff origin/${{ github.base_ref }}.. -- website/route-lockfile.txt --exit-code > website/route-lockfile.diff
+
+      - name: Publish a message
+        if: failure()
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          path: website/route-lockfile.diff
