--- a/.github/workflows/website-integrity.yml
+++ b/.github/workflows/website-integrity.yml
@@ -31,6 +31,7 @@ jobs:
         run: git diff origin/${{ github.base_ref }}.. -- website/route-lockfile.txt | grep "^-[^-]" && exit 1 || exit 0
 
       - name: Diff to file
+        if: always()
         run: git diff origin/${{ github.base_ref }}.. -- website/route-lockfile.txt --exit-code > website/route-lockfile.diff
 
       - name: Publish a message
