--- a/.github/workflows/website-integrity.yml
+++ b/.github/workflows/website-integrity.yml
@@ -35,6 +35,9 @@ jobs:
         id: diff_result
         run: |
           OUTPUT=$(git diff origin/${{ github.base_ref }}.. -- website/route-lockfile.txt)
+          OUTPUT="${OUTPUT//'%'/'%25'}"
+          OUTPUT="${OUTPUT//$'\n'/'%0A'}"
+          OUTPUT="${OUTPUT//$'\r'/'%0D'}"
           echo "::set-output name=result::$OUTPUT"
 
       - name: Publish a message
