--- a/.github/workflows/website-integrity.yml
+++ b/.github/workflows/website-integrity.yml
@@ -26,3 +26,25 @@ jobs:
         run: yarn workspace @graphql-yoga/website run build
       - name: Diff
         run: git diff --exit-code -- website/route-lockfile.txt
+
+      - name: Compare
+        run: git diff origin/${{ github.base_ref }}.. -- website/route-lockfile.txt | grep "^-[^-]" && exit 1 || exit 0
+
+      - name: Diff to file
+        if: always()
+        id: diff_result
+        run: |
+          OUTPUT=$(git diff origin/${{ github.base_ref }}.. -- website/route-lockfile.txt)
+          OUTPUT="${OUTPUT//'%'/'%25'}"
+          OUTPUT="${OUTPUT//$'\n'/'%0A'}"
+          OUTPUT="${OUTPUT//$'\r'/'%0D'}"
+          echo "::set-output name=result::$OUTPUT"
+
+      - name: Publish a message
+        if: always() && contains(steps.diff_result.outputs.result, 'diff')
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          message: |
+            ```diff
+            ${{ steps.diff_result.outputs.result }}
+            ```
