Add missing @envelop/live-query dependency

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -51,6 +51,7 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
+    "@envelop/live-query": "3.3.0",
     "@types/eventsource": "^1",
     "@types/node": "^16.11.7",
     "bob-the-bundler": "^1.5.1",
