Try improving benchmark

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -47,13 +47,14 @@
     "@graphql-tools/utils": "^8.6.0",
     "@graphql-yoga/common": "2.1.0",
     "@graphql-yoga/subscription": "2.0.0",
-    "cross-undici-fetch": "^0.2.0",
+    "cross-undici-fetch": "^0.2.1",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@envelop/live-query": "3.3.1",
     "@types/eventsource": "^1",
     "@types/node": "^16.11.7",
+    "@types/node-fetch": "^2.6.1",
     "bob-the-bundler": "^1.5.1",
     "eventsource": "^2.0.0",
     "graphql": "^16.0.1",
