--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,29 @@ jobs:
         working-directory: ./examples/cloudflare-modules
         run: yarn test
 
+  test-esm:
+    name: Testing with Node ESM
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Use Node 17
+        uses: actions/setup-node@master
+        with:
+          node-version: 17
+          cache: 'yarn'
+
+      - name: Install Dependencies using Yarn
+        run: yarn --ignore-engines
+
+      - name: Build Packages
+        run: yarn build
+
+      - name: Run Tests
+        working-directory: ./examples/node-esm
+        run: yarn test
+
   typecheck:
     name: Typecheck
     runs-on: ubuntu-latest
