Make CI happy' git upsh

--- a/examples/node-esm/package.json
+++ b/examples/node-esm/package.json
@@ -6,7 +6,8 @@
   "module": "index.mjs",
   "scripts": {
     "start": "node index.mjs",
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
+    "check": "exit 0"
   },
   "dependencies": {
     "@graphql-yoga/node": "2.1.0",
