--- a/examples/file-upload-nextjs-pothos/package.json
+++ b/examples/file-upload-nextjs-pothos/package.json
@@ -1,5 +1,7 @@
 {
   "name": "file-upload-nextjs-pothos",
+  "private": true,
+  "version": "0.0.0",
   "scripts": {
     "dev": "next",
     "build": "next build",
