--- a/examples/file-upload-nextjs-pothos/package.json
+++ b/examples/file-upload-nextjs-pothos/package.json
@@ -6,7 +6,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check": "tsc --pretty --noEmit"
   },
   "dependencies": {
     "@graphql-yoga/node": "2.1.0",
