--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -10,6 +10,7 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "scripts": {
+    "generate-graphiql-html": "node scripts/generate-graphiql-html.js",
     "prepack": "bob prepack",
     "check": "tsc --pretty --noEmit"
   },
@@ -52,12 +53,12 @@
     "@graphql-tools/utils": "^8.6.0",
     "@graphql-yoga/subscription": "2.0.0",
     "cross-undici-fetch": "^0.2.5",
-    "chalk": "4.1.2",
     "dset": "^3.1.1",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
+    "@minify-html/js": "0.8.0",
     "bob-the-bundler": "^1.5.1"
   },
   "peerDependencies": {
