--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "contributors": [
     "Johannes Schickling <johannes@graph.cool>",
     "Saihajpreet Singh <saihajpreet.singh@gmail.com> (https://github.com/saihaj)",
-    "Dotan Simha <dotansimha@gmail.com>"
+    "Dotan Simha <dotansimha@gmail.com>",
+    "Arda Tanrikulu <ardatanrikulu@gmail.com>",
+    "Laurin Quast <laurinquast@googlemail.com>"
   ],
   "license": "MIT",
   "bugs": {
