--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -54,6 +54,7 @@
     "@graphql-yoga/subscription": "2.0.0",
     "cross-undici-fetch": "^0.3.0",
     "dset": "^3.1.1",
+    "tiny-lru": "^8.0.1",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
