Better tsconfig.build

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,12 +4,5 @@
     "sourceMap": false,
     "inlineSourceMap": false
   },
-  "exclude": [
-    "**/test/*.ts",
-    "*.spec.ts",
-    "**/tests",
-    "**/test-assets",
-    "**/test-files",
-    "packages/testing"
-  ]
+  "exclude": ["**/*.spec.ts", "**/*.test.ts"]
 }
