Try ESM node-fetch'

--- a/benchmark/hello-world/package.json
+++ b/benchmark/hello-world/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hello-world-benchmark",
   "version": "0.3.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "start": "node start-server.js",
@@ -10,6 +11,7 @@
   "dependencies": {
     "@graphql-yoga/node": "2.3.0",
     "graphql": "16.3.0",
-    "wait-on": "6.0.1"
+    "wait-on": "6.0.1",
+    "node-fetch": "3.2.3"
   }
 }
